# how-to-optim-in-cuda

./: LICENSE  README.md
00_how_python_call_cuda_kernel/: CMakeLists.txt  README.md  build.sh
00_how_python_call_cuda_kernel/python/: test_cuda_hello.py
00_how_python_call_cuda_kernel/src/: cuda_hello.cu  pybind_wrapper.cpp
00_unittest/: test_demo.py
